# nix_protocol

./: .gitignore  Cargo.toml  README.md
lib/hypertree/: Cargo.toml
programs/nix/: Cargo.toml  MarginfiIDL.ts
programs/nix/src/: lib.rs  logs.rs  macros.rs  marginfi_utils.rs  quantities.rs  utils.rs
programs/nix/src/program/: error.rs  instruction.rs  mod.rs
programs/nix/src/program/processor/: cancel_order.rs  claim_seat.rs  create_market.rs  create_market_loan_account.rs  deposit.rs  global_create.rs  global_deposit.rs  mod.rs  place_order.rs  shared.rs
programs/nix/src/state/: claimed_seat.rs  constants.rs  global.rs  market.rs  market_helpers.rs  market_loan.rs  mod.rs  resting_order.rs
programs/nix/src/validation/: loaders.rs  marginfi_checkers.rs  mod.rs  nix_checkers.rs  solana_checkers.rs  token_checkers.rs
programs/nix/tests/: mod.rs
programs/nix/tests/cases/: create_market.rs
programs/nix/tests/test_utils/: global.rs  mod.rs  test_fixture.rs
